[project]
name = "neurosymbolic-highway"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "highway-env>=1.9.1",
    "pearl @ git+https://github.com/facebookresearch/Pearl.git",
    "gymnasium>=0.29.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "pandas>=2.2.0",
    "torch>=2.2.0",
    "tensorboard>=2.16.0",
    "tqdm>=4.66.0",
    "moviepy>=1.0.3",
    "imageio[ffmpeg]>=2.34.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.uv]
override-dependencies = [
    "ale-py ; python_version < '0'",
]
